--- a/sipeed/solutions/bl618_m0pdock_factory/proj.conf
+++ b/sipeed/solutions/bl618_m0pdock_factory/proj.conf
@@ -2,4 +2,7 @@ set(CONFIG_PSRAM 1)
 set(CONFIG_BSP_LCD 1)
 set(CONFIG_BSP_TOUCH 1)
 set(CONFIG_BSP_IMAGE_SENSOR 1)
+set(CONFIG_BSP_SDH_SDCARD 1)
 set(CONFIG_LVGL 1)
+set(CONFIG_FATFS 1)
+set(CONFIG_FATFS_SDH_SDCARD 1)
